<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="318dp"
        android:layout_height="83dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="Welcome to Pomodoro"
        android:textColor="?attr/colorBackgroundFloating"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        />

    <TextView
        android:id="@+id/welcome"
        android:gravity="center"
        android:layout_width="318dp"
        android:layout_height="101dp"
        android:layout_marginTop="16dp"
        android:text="Gain a pomodoro after working 25 minutes and resting for 5 minutes. After recieving 3 pomodoros, take a rest for 20 minutes."
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome"
        />

    <TextView
        android:id="@+id/timeToRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rest_left"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintLeft_toRightOf="@+id/timeToWork"
        app:layout_constraintRight_toLeftOf="@+id/pomodorosEarned"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.042"
        />

    <TextView
        android:id="@+id/pomodorosEarned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/pomodoros_earned"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.042"/>

    <TextView
        android:id="@+id/timeToWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/work_left"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintVertical_bias="0.037"
        />

    <Button
        android:id="@+id/pmdr_start"
        android:layout_width="946dp"
        android:layout_height="0dp"
        android:text="@string/btn_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="63dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome"/>

    <Button
        android:id="@+id/pmdr_stop"
        android:layout_width="946dp"
        android:layout_height="48dp"
        android:text="@string/btn_stop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/pmdr_start"
        />

    <Button
        android:id="@+id/pmdr_reset"
        android:layout_width="946dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pmdr_stop"
        />

</android.support.constraint.ConstraintLayout>